--- a/app_www/modules/wx/views/order/order_online.phtml
+++ b/app_www/modules/wx/views/order/order_online.phtml
@@ -192,7 +192,7 @@ var vv = new Vue({
 					bottle_num:bottle_num,
 					comment:comment
 			};
-			console.log(params);
+			//console.log(params);
 			$.ajax({
 				  type: 'POST',
 				  url: '/wx/order/createorder',
