--- a/app_www/modules/wx/views/order/order_online.phtml
+++ b/app_www/modules/wx/views/order/order_online.phtml
@@ -61,7 +61,7 @@
 				<ul>
 					<li class="name">[[g.name]]</li>
 					<li class="weight">[[g.cname]]</li>
-					<li class="price">￥[[g.direct_price]]</li>
+					<li class="price">￥[[g.retail_price]]</li>
 					<li class="num_btn">
 						<div id="b[[g.id]]" gid="[[g.id]]" class="num">
 							<span onclick="changeNum(this,-1)" class="sub_btn">-</span>
