--- a/app_www/modules/wx/views/order/pay_money.phtml
+++ b/app_www/modules/wx/views/order/pay_money.phtml
@@ -62,7 +62,7 @@
 			<img src="/statics/images/money.png" alt="">
 			<span class="money">[[totalprice]]</span>
 		</div>
-		<div class="r_btn">立即支付</div>
+		<div class="r_btn submit_btn">立即支付</div>
 	</div>
 	<!-- 选择支付方式页 -->
 	<div class="mask"></div>
