--- a/app_www/modules/wx/views/ucenter/account_bind.phtml
+++ b/app_www/modules/wx/views/ucenter/account_bind.phtml
@@ -52,9 +52,9 @@ new Vue({
 				  dataType:'json',
 				  success: function(data){
 					  if(data.status==1){
-						 //dig("保存成功！");alert
+						dig("绑定成功！");
 					  }else{
-						  //dig(data.msg);
+						dig(data.msg);
 					  }
 				  },
 				  error:function (){
