--- a/app_www/modules/wx/views/order/order_online.phtml
+++ b/app_www/modules/wx/views/order/order_online.phtml
@@ -14,6 +14,9 @@
 	<script type="text/javascript" src="/statics/js/vue-resource.min.js"></script>
 	{include '../header.phtml'}
 </head>
+<style>
+
+</style>
 <body id="Vbody">
 	<div class="warn_tip">
 		<span class="warn_text">微信下单立减5元</span>
@@ -32,7 +35,7 @@
 					[[promotion.id==null?promocount+'张':'￥'+promotion.name]]
 				</span>
 			</li>
-			<li><span>配送时间</span><img src="/statics/images/right.png" alt=""><span id="sendtime" class="datat" onclick="laydate()"></span></li>
+			<li><span>配送时间</span><img src="/statics/images/right.png" alt=""><span id="sendtime" class="datat"></span></li>
 		</ul>
 	</div>
 	<div class="note">
@@ -104,7 +107,23 @@
 			</div>-->
 		</div>	
 	</div>
-<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+<!-- <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script> -->
+<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>
+<script>
+	var start = {
+	  elem: '#sendtime',
+	  format: 'YYYY-MM-DD hh:00',
+	  min: laydate.now(), //设定最小日期为当前日期
+	  max: '2099-06-16 23:59:59', //最大日期
+	  istime: true,
+	  istoday: false,
+	  choose: function(datas){
+	     end.min = datas; //开始日选好后，重置结束日的最小日期
+	     end.start = datas //将结束日的初始值设定为开始日
+	  }
+	};
+	laydate(start);
+</script>
 <script type="text/javascript">
 var submitable= true;
 var promotion = {
@@ -127,7 +146,7 @@ if(getCookie('goods')!=null){
 	var Goods = eval("("+getCookie('goods')+")");console.log(Goods);
 	//var Goods = Order.goods;
 	
-	promotion
+	//promotion
 	makePrice();
 	showGoods();
 }else{
@@ -153,10 +172,14 @@ var vv = new Vue({
 		this.getUser();
 	},
 	methods: {
+		//获取用户信息
 		getUser:function(){
 			this.$http.get('/wx/ucenter/getuser', function(data, status, request) {
 				if(data.status==1){
-					User = data.data;
+					User = data.data;//alert(User.addr);
+					if(User.address==''){
+						getSigin();
+					}
 					this.$set('user', data.data);
 				}else{
 					this.$set('user', '');
@@ -173,7 +196,7 @@ var vv = new Vue({
 				}
 			});
 		},
-		//获取订单
+		//提交订单
 		submitOrder:function(){
 			setCookie('goods',null);
 			var comment = $("#beizhu").val();
@@ -211,7 +234,9 @@ var vv = new Vue({
 					  success: function(data){
 						  if(data.code==1){
 							 //dig("保存成功！");alert
-							 location.href="/wx/order/vpay?id="+data.data.id;
+							 var url = 'http://'+window.location.host+"/wx/order/vpay?id="+data.data.id;
+							 //alert(url);
+							 location.href='https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxccf5868dd605affe&redirect_uri='+encodeURIComponent(url).toLowerCase()+'&response_type=code&scope=snsapi_userinfo&state=5#wechat_redirect';
 						  }else{
 							 dig(data.msg);
 						  }
@@ -226,6 +251,7 @@ var vv = new Vue({
 			}
 			
 		},
+		//获取商品
 		getGoods:function(){
 			this.$http.get('/wx/order/getgoods',function(data, status, request){
 				if(data.status==1){
@@ -246,10 +272,14 @@ function changeNum(obj,num){
 	for(var i in Goods){
 		if(Goods[i].id==id){
 			Goods[i].num = parseInt(Goods[i].num)+num;
+			if(Goods[i].num<0){
+				Goods[i].num=0;
+			}
 		}
 	}
 	vv.$set('goods2',Goods);//console.log(vv.aa);
 }
+//获取共享地址
 function getSigin(){
 		var appId='';
 		var timestamp='';
@@ -280,40 +310,78 @@ function getSigin(){
 		//var imgUrl='http://m.miaozhunpin.com/static/img/fenxiang.png';//分享图片
 		//var desc='秒小空已经有10000+人次成功推荐办理入职';//描述
 		wx.config({
-			debug: true,
+			debug: false,
 			appId: appId,
 			timestamp: timestamp,
 			nonceStr: nonceStr,
 			signature: signature,
 			jsApiList: [
 				'openAddress',
-				//'onMenuShareTimeline',
-				//'onMenuShareAppMessage',
-				//'onMenuShareQQ',
-				//'onMenuShareWeibo',
-				//'onMenuShareQZone'
+				'checkJsApi',
+			    'editAddress',
+			    'chooseWXPay',
+			    'getLatestAddress',
+			    'openCard',
+			    'getLocation'
 			]
 		});
 
+		/*wx.checkJsApi({
+		    jsApiList: [
+		    	'openAddress',
+		    	'checkJsApi',
+			    'editAddress',
+			    'chooseWXPay',
+			    'getLatestAddress',
+			    'openCard',
+			    'getLocation'
+		    ], // 需要检测的JS接口列表，所有JS接口列表见附录2,
+		    success: function(res) {
+		        // 以键值对的形式返回，可用的api值true，不可用为false
+		        
+		        
+		    }
+		});*/
 		wx.ready(function () {
+			//alert(wx.openAddress);
 			wx.openAddress({
-			     success: function (data) {
+			     success: function (res) {
 			          // 用户成功拉出地址
-			          console.log(data);
+			          //alert(data);
+			          var params = {
+			          	addr:res.provinceName+res.cityName+res.detailInfo
+			          };
+			          $.ajax({
+						  type: 'POST',
+						  url: '/wx/ucenter/upaddr',
+						  data: params,
+						  cache:false,  
+						  dataType:'json',
+						  success: function(data){
+							  if(data.status==1){
+								 dig("保存成功！");
+								 //location.href="/wx/order/vpay?id="+data.data.id;
+							  }else{
+								 dig(data.msg);
+							  }
+						  },
+						  error:function (){
+							  dig('系统繁忙！');
+						  }
+					});
 			     },
 			     cancel: function (data) {
 			          // 用户取消拉出地址
-			    	 console.log(data);
+			    	 dig(data);
 				 }
 			});
-			
 		});
 
 		wx.error(function (res) {
-			console.log(res.errMsg);  //打印错误消息。及把 debug:false,设置为debug:ture就可以直接在网页上看到弹出的错误提示
+			dig(res.errMsg);  //打印错误消息。及把 debug:false,设置为debug:ture就可以直接在网页上看到弹出的错误提示
 		});
 	}
-	getSigin();
+	
 </script>
 </body>
 </html>
