--- a/app_www/modules/wx/views/order/pay_money.phtml
+++ b/app_www/modules/wx/views/order/pay_money.phtml
@@ -23,7 +23,7 @@
 					<span class="user_name">[[user.user_name]]</span>
 					<span class="user_tel">[[user.mobile_phone]]</span>
 				</li>
-				<li>
+				<li onclick="getSigin()">
 					[[user.address]]
 				</li>
 			</ul>
@@ -69,15 +69,19 @@
 	<div class="pay_mode">
 		<h1>选择支付方式</h1>
 		<ul>
-			<li><img class="icon_pay" src="/statics/images/xianj.png" alt="">货到付款<img class="choose c_circle" src="/statics/images/btn_f.png" alt=""></li>
-			<li><img class="icon_pay" src="/statics/images/weixin.png" alt="">微信缴费<span>（功能暂未开放）</span><img class="c_circle" src="/statics/images/btn_f.png" alt=""></li>
+			<li><img class="icon_pay" src="/statics/images/xianj.png" alt="">货到付款<img onclick="payType=0;" class="choose c_circle" src="/statics/images/btn_f.png" alt=""></li>
+			<li><img class="icon_pay" src="/statics/images/weixin.png" alt="">微信缴费<span>（功能暂未开放）</span><img onclick="payType=1" class="choose c_circle" src="/statics/images/btn_f.png" alt=""></li>
 		</ul>
 		<div class="f_pay">
 			<div class="l_cancel">取消</div>
-			<div class="r_sure">确定</div>
+			<div v-on:click="pay" class="r_sure">确定</div>
 		</div>
 	</div>
+<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>
 <script type="text/javascript">
+var payType=0;
+var payMoney = 0;
+var Promoid = 0;
 var id = GetQueryString('id');
 new Vue({
 	el: '#Vbody',
@@ -95,7 +99,9 @@ new Vue({
 					for(var i in goods){
 						totalpric += goods[i].num*goods[i].price; 
 					}
-					totalpric -= data.data.promotion_money; 
+					totalpric -= data.data.promotion_money;
+					payMoney =  totalpric;
+					Promoid = data.data.promotion_id;
 					this.$set('totalprice',totalpric);
 					this.$set('order', data.data);
 				}else{
@@ -113,8 +119,129 @@ new Vue({
 				}
 			});
 		},
+		pay:function(){
+			var params = {
+				paytype:payType,
+				paymoney:payMoney,
+				promoid:Promoid
+			};
+			if(params.paytype==1){
+				location.href='';
+			}
+			$.ajax({
+				  type: 'GET',
+				  url: '/wx/order/pay',
+				  data: params,
+				  cache:false,  
+				  dataType:'json',
+				  success: function(data){
+					  if(data.status==1){
+						//dig("绑定成功！");
+						location.href="/wx/ucenter/my";
+					  }else{
+						dig(data.msg);
+					  }
+				  },
+				  error:function (){
+					  //dig('系统繁忙！');
+				  }
+			});
+		}
 	}
 })
+
+//获取共享地址
+function getSigin(){
+	return;
+		var appId='';
+		var timestamp='';
+		var nonceStr='';
+		var signature='';
+		var url='';
+		var addrSign = '';
+		var targetUrl=location.href.split("#")[0];
+		$.ajax({
+			url:'/wx/order/sign?url='+encodeURIComponent(targetUrl),
+			type:'get',
+			dataType:'json',
+			async : false, //默认为true 异步
+			error:function(err){
+				console.log(err);
+			},
+			success:function(data){
+				appId=data.data.appId;
+				timestamp=data.data.timestamp;
+				nonceStr=data.data.nonceStr;
+				signature=data.data.signature;
+				url  =	data.data.url;
+				addrSign = data.data.addrSign;
+				//alert(addrSign);
+			}
+		});
+
+		//var title='【秒小空】'+coName+',正在急聘'+jmName+',快来推荐,快拿佣金吧！';//分享标题
+		//var link='http://web.miaoxiaokong.com/co_jobshow.html?jmid='+urlhref;//分享链接
+    	//var link='http://web.miaoxiaokong.com/indexshare.html?jmid='+urlhref+'&S_ID='+s_id+'&CM_ID='+cm_id;//分享链接
+		//var imgUrl='http://m.miaozhunpin.com/static/img/fenxiang.png';//分享图片
+		//var desc='秒小空已经有10000+人次成功推荐办理入职';//描述
+		wx.config({
+			debug: true,
+			appId: appId,
+			timestamp: timestamp,
+			nonceStr: nonceStr,
+			signature: signature,
+			jsApiList: [
+				'openAddress',
+				'checkJsApi',
+			    'editAddress',
+			    'chooseWXPay',
+			    'getLatestAddress',
+			    'openCard',
+			    'getLocation'
+			]
+		});
+
+		/*wx.checkJsApi({
+		    jsApiList: [
+		    	'openAddress',
+		    	'checkJsApi',
+			    'editAddress',
+			    'chooseWXPay',
+			    'getLatestAddress',
+			    'openCard',
+			    'getLocation'
+		    ], // 需要检测的JS接口列表，所有JS接口列表见附录2,
+		    success: function(res) {
+		        // 以键值对的形式返回，可用的api值true，不可用为false
+		        
+		        
+		    }
+		});*/
+		var editConfig = {
+			"appId": appId,
+			"scope": "jsapi_address",
+			"signType": "sha1",
+			"addrSign": addrSign,
+			"timeStamp": timestamp,
+			"nonceStr": nonceStr,
+		};
+
+		console.log(editConfig);
+
+		WeixinJSBridge.invoke('editAddress', editConfig, function (res) {
+			//若res 中所带的返回值不为空，则表示用户选择该返回值作为收货地址。
+			//否则若返回空，则表示用户取消了这一次编辑收货地址。
+			alert(res.err_msg);
+		});
+		//});
+		wx.ready(function () {
+			
+		});
+
+		wx.error(function (res) {
+			dig(res.errMsg);  //打印错误消息。及把 debug:false,设置为debug:ture就可以直接在网页上看到弹出的错误提示
+		});
+	}
 </script>
 </body>
 </html>
