--- a/app_www/modules/wx/views/ucenter/account_bind.phtml
+++ b/app_www/modules/wx/views/ucenter/account_bind.phtml
@@ -5,23 +5,49 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0"/>
 	<title>账户绑定</title>
 	<link rel="stylesheet" href="/statics/css/base.css"/>
-	<link rel="stylesheet" href="/statics/css/style.css"/>
+	<!-- <link rel="stylesheet" href="/statics/css/style.css"/> -->
 	<script src="/statics/js/jquery-1.8.3.min.js"></script>
 	<script src="/statics/js/main.js"></script>
 	<script type="text/javascript" src="/statics/js/Vue.min.js"></script>
 	<script type="text/javascript" src="/statics/js/vue-resource.min.js"></script>
 	{include '../header.phtml'}
 </head>
-<body id="Vbody">
-	<div class="tel">
-		<span>手机号</span><input id="phone" type="tel" placeholder="请输入手机号" maxlength="11">
+<body id="Vbody" style="overflow:hidden;width:100%">
+	<div style="overflow:hidden;width:100%">
+		<div class="tel">
+			<span>手机号</span><input id="phone" type="tel" placeholder="请输入手机号" maxlength="11">
+		</div>
+		<div class="code">
+			<input id="vcode" type="number" placeholder="请输入验证码"><span id="getCode" v-on:click="getCode">获取验证码</span>
+		</div>
+		<div v-on:click="bind" class="finish">完成</div>
 	</div>
-	<div class="code">
-		<input id="vcode" type="number" placeholder="请输入验证码"><span v-on:click="getCode">获取验证码</span>
-	</div>
-	<div v-on:click="bind" class="finish">完成</div>
+	
 <script type="text/javascript">
+var validCode=true;
 
+$(function  () {
+	//获取短信验证码
+	// $("#getCode").click (function  () {
+	// 	var time=30;
+	// 	var code=$(this);
+	// 	if (validCode && $("#phone").val()) {
+	// 		validCode=false;
+	// 		//code.addClass("msgs1");
+	// 	var t=setInterval(function  () {
+	// 			time--;
+	// 			code.html('等待'+time+"秒");
+	// 			if (time==0) {
+	// 				clearInterval(t);
+	// 			code.html("获取验证码");
+	// 				validCode=true;
+	// 			//code.removeClass("msgs1");
+
+	// 			}
+	// 		},1000)
+	// 	}
+	// })
+})
 new Vue({
 	el: '#Vbody',
 	data:{
@@ -52,6 +78,9 @@ new Vue({
 				  dataType:'json',
 				  success: function(data){
 					  if(data.status==1){
+					  	setTimeout(function(){
+							location.href="/wx/order/vorder";
+						},1200);
 						dig("绑定成功！");
 					  }else{
 						dig(data.msg);
@@ -64,10 +93,33 @@ new Vue({
 		},
 		//获取验证码接口
 		getCode:function(){
+			if(!validCode){
+				return;
+			}
 			var phone = $("#phone").val();
 			this.$http.get('/wx/ucenter/getcode?phone='+phone,function(data, status, request){
 				if(data.status==1){
+					//获取短信验证码
+					//$("#getCode").click (function  () {
+						var time=30;
+						var code=$("#getCode");
+						if (validCode && $("#phone").val()) {
+							validCode=false;
+							//code.addClass("msgs1");
+						var t=setInterval(function  () {
+								time--;
+								code.html('等待'+time+"秒");
+								if (time==0) {
+									clearInterval(t);
+								code.html("获取验证码");
+									validCode=true;
+								//code.removeClass("msgs1");
 
+								}
+							},1000)
+						}
+					//});
+					dig(data.msg);
 				}else{
 					dig(data.msg);
 				}
