--- a/app_www/modules/wx/views/ucenter/coupon.phtml
+++ b/app_www/modules/wx/views/ucenter/coupon.phtml
@@ -53,7 +53,7 @@
 		<div class="details_c">
 			<div class="l_m">
 				<span class="yang">￥</span>
-				<span class="num_total">2.0</span>
+				<span class="num_total">[[p.price]]</span>
 			</div>
 			<div class="validity">截止[[p.time_end==0?'  永久':p.time_end_str]]</div>
 		</div>
@@ -68,7 +68,7 @@
 		<div class="details_c">
 			<div class="l_m">
 				<span class="yang">￥</span>
-				<span class="num_total">2.0</span>
+				<span class="num_total">[[p.price]]</span>
 			</div>
 			<div class="validity">截止[[p.time_end==0?'  永久':p.time_end_str]]</div>
 		</div>
